Align MainMenu with CategoryMenu - fix horizontal padding

--- a/front-end/src/components/MainMenu/MainMenu.module.css
+++ b/front-end/src/components/MainMenu/MainMenu.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 .mainMenu li a {
